src/App.css
article{
    width:100%;
    height:100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: black;
    color: white;
}
article section{
    background-color: purple;
    padding: 10px 20px;
    min-width: 300px;
}
div{
    display: flex;
    justify-content: center;
    align-items: center;
}
input{
    width: 70%;
    padding: 10px;
    margin: 5px;
    border: none;
    border-radius: 2px;
    background-color: #f2f2f2;
    font-size: 16px;
    outline: none;
}
button{
    padding:5px 10px;
    font-size: 20px;
    background-color: black;
    color: #f2f2f2;
}
article section ul{
    list-style-type: none;
    width:auto;
    /* border:2px solid white; */
    padding:0;
}
article section ul li{
    display: flex;
    justify-content: space-between;
    align-items: center;
    list-style: none;
    border:2px solid purple;
    width:auto;
    background-color: black;
    padding:0px 10px;
    margin:5px 0;
    border-radius: 5px;
}
span{
    display: flex;
    position: relative;
}
img{
    width:20px;
    background-color: white;
    padding:5px;
    border-radius: 10px;
    margin:0 5px; 
    cursor: pointer;
}
.tooltip{
    position: absolute;
    font-size: 12px;
    margin:5px 0 0 5px;
    background-color: white;
    color: black;
    padding:1px 5px;
    display: none;
    /* display: inline-block; */
}
.tooltip::after{
    content: "";
    position: absolute;
    top: 0%;
    left: 3%;
    margin-top:-10px;
    border-width: 5px;
    border-style: solid;
    border-color:   transparent  transparent white transparent;
}
img:hover + .tooltip{
    display: block;
}
.bordered{
    border-left: 2px solid white;
}

